Fix conversion of charsets when replying/forwarding a message.

The msg->body() must be converted to unicode with the right codec
and not blindly with UTF-8.

BUG: 258936

svn path=/trunk/KDE/kdepim/messagecomposer/; revision=1208340